# 111

A53core/: CMakeLists.txt  main.cpp
A53core/Inc/: RpmsgClient.h  ThreadSafeString.h  main.h  multicore_comm.h  opencv_pushstream.h  utils.h
A53core/Src/: RpmsgClient.cpp  multicore_comm.cpp  opencv_pushstream.cpp  sleep.sh  utils.cpp
